--- a/assets/matpes.css
+++ b/assets/matpes.css
@@ -3,16 +3,11 @@
 }
 
 #matpes-title{
-    background: -webkit-linear-gradient(#613B9B, darkblue);
+    background: -webkit-linear-gradient(#613B9B, royalblue);
     -webkit-background-clip: text;
     -webkit-text-fill-color: transparent;
 }
 
-#matpes-tagline{
-    font-size: 1.5rem;
-    font-style: italic;
-    text-align: center;
-}
 
 .section-title {
     padding-top: 1rem;
@@ -23,11 +18,6 @@
     height: 40px;
     display: block;
     float: right;
-}
-
-#download-brand {
-    font-size: 1rem;
-    color: #eee;
 }
 
 .nav-link-item {
